nonlinear methods and the epicenter problem

--- a/Content/epicenter.ipynb
+++ b/Content/epicenter.ipynb
@@ -59,13 +59,13 @@
     "\n",
     "$$\n",
     "\\mathbf{d} = \\begin{bmatrix}\n",
-    "d_{A} \\\\\n",
-    "d_{B} \\\\\n",
-    "d_{C}\n",
+    "\\Delta t_{A} \\\\\n",
+    "\\Delta t_{B} \\\\\n",
+    "\\Delta t_{C}\n",
     "\\end{bmatrix} \\: ,\n",
     "$$\n",
     "\n",
-    "where $d_{i}$ represents the observed time difference between the first arrivals of the P and S waves at the station $i$, $i = A, B, C$. This vector is called **observed data vector**."
+    "where $\\Delta t_{i}$ represents the observed time difference between the first arrivals of the P and S waves at the station $i$, $i = A, B, C$. This vector is called **observed data vector**."
    ]
   },
   {
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that, differently from a linear problem (e.g., the problems presented in the notebooks [least_squares](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/least_squares.ipynb) and [grav_net](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/grav_net.ipynb)), the derivative of the predicted data $\\Delta t_{i} (\\mathbf{p})$, $i = A, B, C$, with respect to $x_{0}$ or $y_{0}$ is still a function of $x_{0}$ and $y_{0}$. Consequently, we cannot compute the gradient of $\\Phi(\\mathbf{p})$, set the result to the null vector, and solve the resultant linear system for determining $\\mathbf{p}^{\\ast}$. The problem of estimating $\\mathbf{p}^{\\ast}$ is an example of non-linear otpimization problem and needs to be solved iteratively."
+    "Note that, differently from a linear problem (e.g., the problems presented in the notebooks [least_squares](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/least_squares.ipynb) and [grav_net](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/grav_net.ipynb)), the derivative of the predicted data $\\Delta t_{i} (\\mathbf{p})$, $i = A, B, C$, with respect to $x_{0}$ or $y_{0}$ is still a function of $x_{0}$ and $y_{0}$. Consequently, setting the gradient of $\\Phi(\\mathbf{p})$ to the null vector does not result in a linear system for estimating $\\mathbf{p}^{\\ast}$. The problem of estimating $\\mathbf{p}^{\\ast}$ is an example of non-linear optimization problem and needs to be solved iteratively."
    ]
   },
   {
@@ -205,6 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Auxiliary functions'></a>\n",
     "#### Auxiliary functions"
    ]
   },
@@ -249,15 +250,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def plot_data(data):\n",
+    "def plot_data(data, filename=None):\n",
     "    '''\n",
     "    input\n",
     "    data: list of numpy arrays - data sets to be plotted.\n",
     "          In the case of two data sets, the first \n",
     "          one must be the observed data.\n",
+    "    filename: string or None - if not None, it saves the figure with\n",
+    "              name defined by filename.\n",
     "   \n",
     "    output\n",
     "    matplotlib figure\n",
@@ -286,6 +291,8 @@
     "    plt.grid()\n",
     "    plt.legend(bbox_to_anchor=(0., 1.02, 1., .102), \n",
     "               loc=3, ncol=2, borderaxespad=0.)\n",
+    "    if filename is not None:\n",
+    "        plt.savefig(filename)\n",
     "    plt.show()"
    ]
   },
@@ -355,7 +362,8 @@
    },
    "outputs": [],
    "source": [
-    "def plot_goal_function(x0, y0, phi, p_true=None, stations=None, epicenters=None):\n",
+    "def plot_goal_function(x0, y0, phi, p_true=None, stations=None, epicenters=None, \n",
+    "                       filename=None):\n",
     "    '''\n",
     "    Plot the goal function, the stations, the true epicenter\n",
     "    location and the set of estimated epicenters produced by\n",
@@ -375,6 +383,8 @@
     "                computed by an iterative method. The first collumn contains the\n",
     "                x coordinate and the second collumn contains the y coordinate\n",
     "                of the estimated epicenters.\n",
+    "    filename: string or None - if not None, it saves the figure with\n",
+    "              name defined by filename\n",
     "    \n",
     "    output\n",
     "    matplotlib figure\n",
@@ -411,6 +421,8 @@
     "    plt.yticks(fontsize=12)\n",
     "    plt.xlim(ymin,ymax)\n",
     "    plt.ylim(xmin,xmax)\n",
+    "    if filename is not None:\n",
+    "        plt.savefig(filename)\n",
     "    plt.show()"
    ]
   },
@@ -422,13 +434,15 @@
    },
    "outputs": [],
    "source": [
-    "def plot_phi(phi):\n",
+    "def plot_phi(phi, filename=None):\n",
     "    '''\n",
     "    Plot the goal function values along the\n",
     "    iterations.\n",
     "    \n",
     "    input\n",
     "    phi: list - goal function values\n",
+    "    filename: string or None - if not None, it saves the figure with\n",
+    "              name defined by filename\n",
     "    \n",
     "    output\n",
     "    matplotlib figure\n",
@@ -445,6 +459,8 @@
     "    plt.grid()\n",
     "    plt.xlim(0, len(phi))\n",
     "    plt.ylim(-5.,phi[0]+5.)\n",
+    "    if filename is not None:\n",
+    "        plt.savefig(filename)\n",
     "    plt.show()"
    ]
   },
@@ -702,19 +718,190 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another way of estimating the coordinates of the epicenter is using a numerical method. \n",
-    "\n",
-    "that receives an initial approximation $\\mathbf{p}_{0}$ for the parameter vector, computes a correction $\\Delta \\mathbf{p}$"
+    "Another way of estimating the coordinates of the epicenter is using a numerical method. Here, we will limit ourselves to methods based on the gradient of the goal function. Specifically, we will talk about **Newton's**, **Gauss-Newton**, **Steepest Decent**, and **Levenberg-Marquardt** method."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cell contains the base algorithm used to implement the **Newton's**, **Gauss-Newton**, **Steepest Decent** method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    # initial approximation\n",
+    "    p0 = np.array([20., 40.])\n",
+    "    \n",
+    "    # predicted data produced by the initial approximation\n",
+    "    d0 = predicted_data(vp,vs,x,y,p0)\n",
+    "    \n",
+    "    # residual produced by the initial approaximation\n",
+    "    r0 = dobs - d0\n",
+    "    \n",
+    "    # goal function produced by the initial approximation\n",
+    "    phi0 = np.sum(r0*r0)\n",
+    "\n",
+    "    # lists used to save the estimated parameters \n",
+    "    # and goal function values\n",
+    "    x0_list = [p0[0]]\n",
+    "    y0_list = [p0[1]]\n",
+    "    phi_list = [phi0]\n",
+    "\n",
+    "    # maximum number of iterations\n",
+    "    itmax = 50\n",
+    "    \n",
+    "    # small value controlling the convergence\n",
+    "    beta = 0.00001\n",
+    "\n",
+    "    for it in range(itmax):\n",
+    "\n",
+    "        # Jacobian matrix\n",
+    "        G = jacobian()\n",
+    "        \n",
+    "        # gradient\n",
+    "        g = -2.*np.dot(G.T,r0)\n",
+    "        \n",
+    "        # Hessian matrix\n",
+    "        H = hessian()\n",
+    "\n",
+    "        # correction on the parameter vector\n",
+    "        dp = np.linalg.solve(H,-g)\n",
+    "\n",
+    "        # predicte data produced by the new parameter vector p0+dp\n",
+    "        d = predicted_data(vp,vs,x,y,p0+dp)\n",
+    "        \n",
+    "        # residuals produced by the new parameter vector p0+dp\n",
+    "        r = dobs - d\n",
+    "        \n",
+    "        # goal function produced by the new parameter vector p0+dp\n",
+    "        phi = np.sum(r*r)\n",
+    "\n",
+    "        # absolute variation in the goal function\n",
+    "        dphi = phi - phi0\n",
+    "        \n",
+    "        # relative variation in the goal function\n",
+    "        rel_variation = abs(dphi)/(phi0 + 1e-15)\n",
+    "\n",
+    "        # convengence analysis\n",
+    "        if (dphi > 0) or (rel_variation <= beta):\n",
+    "            # convergence achieved\n",
+    "            break\n",
+    "        else:\n",
+    "            # convengence not achieved\n",
+    "            phi0 = phi\n",
+    "            p0 += dp\n",
+    "            d0 = d\n",
+    "            r0 = r\n",
+    "            x0_list.append(p0[0])\n",
+    "            y0_list.append(p0[1])\n",
+    "            phi_list.append(phi0)\n",
+    "\n",
+    "    # predicted data produced by the final estimate\n",
+    "    d = d0\n",
+    "    \n",
+    "    # set of estimated parameters\n",
+    "    epicenters = np.array([x0_list, y0_list]).T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cell contains the base algorithm used to implement the **Levenberg-Marquardt** method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    # initial approximation\n",
+    "    p0 = np.array([20., 40.])\n",
+    "    \n",
+    "    # predicted data produced by the initial approximation\n",
+    "    d0 = predicted_data(vp,vs,x,y,p0)\n",
+    "    \n",
+    "    # residual produced by the initial approaximation\n",
+    "    r0 = dobs - d0\n",
+    "    \n",
+    "    # goal function produced by the initial approximation\n",
+    "    phi0 = np.sum(r0*r0)\n",
+    "\n",
+    "    # lists used to save the estimated parameters \n",
+    "    # and goal function values\n",
+    "    x0_list = [p0[0]]\n",
+    "    y0_list = [p0[1]]\n",
+    "    phi_list = [phi0]\n",
+    "\n",
+    "    # maximum number of iterations in the outer loop\n",
+    "    itmax = 50\n",
+    "    \n",
+    "    # small value controlling the convergence\n",
+    "    beta = 0.00001\n",
+    "    \n",
+    "    # Identity matrix\n",
+    "    I = np.identity(2)\n",
+    "    \n",
+    "    # initial value for the levenberg-marquardt parameter\n",
+    "    lamb = 0.1\n",
+    "    \n",
+    "    # positive contant used to change the levenberg-marquardt parameter\n",
+    "    dlamb = 2.\n",
+    "    \n",
+    "    # maximum number of iterations in the inner loop\n",
+    "    itmax_marq = 15\n",
+    "\n",
+    "    for it in range(itmax):\n",
+    "\n",
+    "        # Jacobian matrix\n",
+    "        G = jacobian()\n",
+    "        \n",
+    "        # gradient\n",
+    "        g = -2.*np.dot(G.T,r0)\n",
+    "        \n",
+    "        # Hessian matrix\n",
+    "        H = hessian()\n",
+    "\n",
+    "        # correction on the parameter vector\n",
+    "        dp = np.linalg.solve(H,-g)\n",
+    "\n",
+    "        # predicte data produced by the new parameter vector p0+dp\n",
+    "        d = predicted_data(vp,vs,x,y,p0+dp)\n",
+    "        \n",
+    "        # residuals produced by the new parameter vector p0+dp\n",
+    "        r = dobs - d\n",
+    "        \n",
+    "        # goal function produced by the new parameter vector p0+dp\n",
+    "        phi = np.sum(r*r)\n",
+    "\n",
+    "        # absolute variation in the goal function\n",
+    "        dphi = phi - phi0\n",
+    "        \n",
+    "        # relative variation in the goal function\n",
+    "        rel_variation = abs(dphi)/(phi0 + 1e-15)\n",
+    "\n",
+    "        # convengence analysis\n",
+    "        if (dphi > 0) or (rel_variation <= beta):\n",
+    "            # convergence achieved\n",
+    "            break\n",
+    "        else:\n",
+    "            # convengence not achieved\n",
+    "            phi0 = phi\n",
+    "            p0 += dp\n",
+    "            d0 = d\n",
+    "            r0 = r\n",
+    "            x0_list.append(p0[0])\n",
+    "            y0_list.append(p0[1])\n",
+    "            phi_list.append(phi0)\n",
+    "\n",
+    "    # predicted data produced by the final estimate\n",
+    "    d = d0\n",
+    "    \n",
+    "    # set of estimated parameters\n",
+    "    epicenters = np.array([x0_list, y0_list]).T"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -727,25 +914,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) In your `my_functions.py` file, create a function for calculating the Jacobian matrix. This function must receive `vp`, `vs` (the seismic velocities), `x`, `y` (the coordinates of the stations) and `p` (a parameter vector) and return the Jacobian matrix `G`. Your code must look like:\n",
+    "1) In your `my_functions.py` file, create a function for calculating the Jacobian matrix. Your code must look like:\n",
     "\n",
-    "    def jacobian(vp,vs,x,y,p):\n",
+    "    def jacobian(variable1, variable2, ...):\n",
     "        '''\n",
     "        Brief description of this function\n",
     "        text text text ...\n",
     "\n",
     "        input\n",
     "        text text text ...\n",
+    "        text text text ...\n",
     "\n",
     "        output\n",
-    "        text text text ...\n",
+    "        G: numpy array 2D - the Jacobian matrix\n",
     "        '''\n",
     "\n",
-    "        assert (vp > vs), 'vp must be greater than vs'\n",
-    "\n",
-    "        assert (x.size == y.size), 'x and y must have the same number of elements'\n",
-    "\n",
-    "        assert (vp != 0.) and (vs != 0.), 'vp and vs must be different from zero'\n",
+    "        assert (condition), 'error message'\n",
+    "        assert (condition1) and (condition2), 'error message'\n",
     "        \n",
     "        your code your code your code\n",
     "        your code your code your code\n",
@@ -759,25 +944,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) In your `my_functions.py` file, create a function for calculating the true Hessian matrix. This function must receive `vp`, `vs` (the seismic velocities), `x`, `y` (the coordinates of the stations) and `p` (a parameter vector) and return the Hessian matrix `H`. Your code must look like:\n",
+    "2) In your `my_functions.py` file, create a function for calculating the true Hessian matrix. Your code must look like:\n",
     "\n",
-    "    def hessian(vp,vs,x,y,p):\n",
+    "    def hessian(variable1, variable2, ...):\n",
     "        '''\n",
     "        Brief description of this function\n",
     "        text text text ...\n",
     "\n",
     "        input\n",
     "        text text text ...\n",
+    "        text text text ...\n",
     "\n",
     "        output\n",
-    "        text text text ...\n",
+    "        H: numpy array 2D - the Hessian matrix\n",
     "        '''\n",
     "\n",
-    "        assert (vp > vs), 'vp must be greater than vs'\n",
-    "\n",
-    "        assert (x.size == y.size), 'x and y must have the same number of elements'\n",
-    "\n",
-    "        assert (vp != 0.) and (vs != 0.), 'vp and vs must be different from zero'\n",
+    "        assert (condition), 'error message'\n",
+    "        assert (condition1) and (condition2), 'error message'\n",
     "        \n",
     "        your code your code your code\n",
     "        your code your code your code\n",
@@ -791,7 +974,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3) In your `test_my_functions.py` file, create a test for the function `jacobian` and another test for the function `hessian`. The test must compare the Jacobian and Hessian matrices created by your functions and, respectively, the Jacobian and Hessian matrices obtained by using known `vp`, `vs`, `x`, `y`, and `p`."
+    "3) In your `test_my_functions.py` file, create a test for the function `jacobian`. The test must compare the Jacobian matrix created by your function and the Jacobian matrix obtained by using known `vp`, `vs`, `x`, `y`, and `p`.\n",
+    "\n",
+    "4) In your `test_my_functions.py` file, create a test for the function `hessian`. The test must compare the Hessian matrix created by your function and the Hessian matrix obtained by using known `vp`, `vs`, `x`, `y`, and `p`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Exercise (extra)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use your functions for computing the Jacobian and Hessian matrices and implement the **Newton's**, **Gauss-Newton**, **Steepest Decent**, and **Levenberg-Marquardt** method.\n",
+    "\n",
+    "After estimating the epicenter by using these methods, use the [Auxiliary functions](#Auxiliary functions) to plot the results. The following cells present some results obtained with the Levenberg-Marquardt method:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    plot_goal_function(x0_grid, y0_grid, phi_grid,\n",
+    "                       p_true=p_true, stations=stations, epicenters=epicenters_lm,\n",
+    "                       filename='epicenters_lm.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='epicenter_figs/epicenters_lm.png', width=500>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    plot_phi(phi_list_lm, filename='convergence_lm.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='epicenter_figs/convergence_lm.png', width=500>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    plot_data([dobs, d_lm], filename='datafit_lm.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='epicenter_figs/datafit_lm.png', width=500>"
    ]
   },
   {
