--- a/Content/least_squares.ipynb
+++ b/Content/least_squares.ipynb
@@ -300,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "is the gradient of $\\Phi(\\mathbf{x})$."
+    "is the gradient of $\\Phi(\\mathbf{x})$. It is time to [review some mathematical stuff](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/review_matrix_operations.ipynb) to go forward with our study."
    ]
   },
   {
