--- a/Content/fd_intro2.ipynb
+++ b/Content/fd_intro2.ipynb
@@ -134,9 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -282,9 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -435,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise (extra)"
+    "### Exercise (extra)"
    ]
   },
   {
@@ -473,9 +469,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
