--- a/Content/fourier_1D_1.ipynb
+++ b/Content/fourier_1D_1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -56,15 +56,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We known from trogonometry that [sine](http://mathworld.wolfram.com/Sine.html) and [cosine](http://mathworld.wolfram.com/Cosine.html) are periodic functions (with period $\\lambda = 2  \\pi$) that are bounded between $-1$ and $1$."
+    "We known from trigonometry that [sine](http://mathworld.wolfram.com/Sine.html) and [cosine](http://mathworld.wolfram.com/Cosine.html) are periodic functions (with period $\\lambda = 2  \\pi$) that are bounded between $-1$ and $1$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -181,9 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -210,9 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -318,9 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -360,9 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -712,7 +702,7 @@
    "source": [
     "<a id='ex-extra-intro1'></a>\n",
     "\n",
-    "## Exercise - extra"
+    "### Exercise (extra)"
    ]
   },
   {
@@ -748,7 +738,7 @@
    "source": [
     "1. Determine the coefficients of the Fourier series.\n",
     "\n",
-    "2. Create a function that receives an array `x` and returns the another array containing the values of the function $f(x)$ defined above.\n",
+    "2. Create a function that receives an array `x` and returns another array containing the values of the function $f(x)$ defined above.\n",
     "\n",
     "3. Create a function that receives an array `x` and an integer `N` and returns another array containing the Fourier series evaluated from `n = 0` until `n = N`.\n",
     "\n",
@@ -768,7 +758,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -782,9 +772,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
