--- a/Content/fourier_1D_4.ipynb
+++ b/Content/fourier_1D_4.ipynb
@@ -282,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $G(f_{n}) \\approx G_{n}$ (Press et al., 1992)."
+    "where $G(f_{n}) \\approx \\Delta y \\, G_{n}$ (Press et al., 1992)."
    ]
   },
   {
@@ -319,7 +319,7 @@
    "source": [
     "<a id='ex30'></a>\n",
     "\n",
-    "## Exercise 30"
+    "### Exercise"
    ]
   },
   {
