--- a/Content/fourier_1D_4.ipynb
+++ b/Content/fourier_1D_4.ipynb
@@ -328,6 +328,20 @@
    "source": [
     "Implement the Discrete Fourier Transform ([equations 45](#eq45)) and the Discrete Inverse Fourier Transform ([equations 46](#eq46)). Compare the results with the [`scipy.fftpack.fft`](http://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.fft.html) and [`scipy.fftpack.ifft`](http://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.ifft.html). Hint: take a look at [Jake VanderPlas' blog](https://jakevdp.github.io/blog/2013/08/28/understanding-the-fft/)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the functions you have created above to compute the first derivative of the total-field anomaly computed by using the notebook [synthetic_mag_data_fatiando](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/synthetic_magnetic_data/synthetic_mag_data_fatiando.ipynb). The total-field anomaly profile is saved in the txt file `tfanomaly_profile.txt`, in the directory `synthetic_magnetic_data`. Hint: Take a look at the end of the notebook [synthetic_mag_data_fatiando](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/synthetic_magnetic_data/synthetic_mag_data_fatiando.ipynb)."
+   ]
   }
  ],
  "metadata": {
