--- a/Content/flops.ipynb
+++ b/Content/flops.ipynb
@@ -13,14 +13,14 @@
    "source": [
     "One way to quantify the computational cost of a matrix computation is to count the total number of *floating-point operations* or *flops*. A flop is an addition, subtraction, multiplication, or division of two [floating-point numbers](https://en.wikipedia.org/wiki/Floating-point_arithmetic#Floating-point_numbers).\n",
     "\n",
-    "We can easily define the total number of flops associated with simple matrix operations:"
+    "We can define the total number of flops associated with simple matrix operations. For example:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1. Product of a scalar $\\alpha$ and an $N \\times 1$ vector $\\mathbf{x}$**\n",
+    "**Product of a scalar $\\alpha$ and an $N \\times 1$ vector $\\mathbf{x}$**\n",
     "\n",
     "$$\n",
     "\\alpha \\, \\begin{bmatrix} x_{1} \\\\ x_{2} \\\\ \\vdots \\\\ x_{N} \\end{bmatrix} = \n",
@@ -37,9 +37,25 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Exercise (extra)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2. Dot product of two $N \\times 1$ vectors $\\mathbf{x}$ and $\\mathbf{y}$**\n",
+    "Determine the number of flops required to perform the folowing operations:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Dot product of two $N \\times 1$ vectors $\\mathbf{x}$ and $\\mathbf{y}$**\n",
     "\n",
     "$$\n",
     "\\mathbf{x}^{\\top}\\mathbf{y} = x_{1} \\, y_{1} + x_{2} \\, y_{2} + \\cdots + x_{N} \\, y_{N} \\: .\n",
@@ -50,28 +66,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, there are $N$ multiplications and $N - 1$ additions. Consequently, the dot product of vectors requires $2N - 1 \\approx 2N$ flops."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**3. Hadamard (or eletrywise) product of two $N \\times 1$ vectors $\\mathbf{x}$ and $\\mathbf{y}$**\n",
+    "**Hadamard (or eletrywise) product of two $N \\times 1$ vectors $\\mathbf{x}$ and $\\mathbf{y}$**\n",
     "\n",
     "$$\n",
     "\\mathbf{x} \\circ \\mathbf{y} = \n",
     "\\begin{bmatrix} x_{1} \\, y_{1} \\\\ x_{2} \\, y_{2} \\\\ \\vdots \\\\ x_{N} \\, y_{N} \\end{bmatrix} \\: .\n",
-    "$$\n",
-    "\n",
-    "$N$ flops, right?"
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4. Outer product of an $N \\times 1$ vector $\\mathbf{x}$ and an $M \\times 1$ vector $\\mathbf{y}$**\n",
+    "**Outer product of an $N \\times 1$ vector $\\mathbf{x}$ and an $M \\times 1$ vector $\\mathbf{y}$**\n",
     "\n",
     "$$\n",
     "\\mathbf{x} \\otimes \\mathbf{y}^{\\top} = \n",
@@ -88,45 +95,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$N M$ flops, ok?"
+    "**Product of an $N \\times M$ matrix $\\mathbf{A}$ and an $M \\times 1$ vector $\\mathbf{x}$**\n",
+    "\n",
+    "Determine the total number of flops required for computing the resulting vector (hit: use the dot product formulation).\n",
+    "\n",
+    "In the notebook ([`matrix-vector.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/matrix-vector.ipynb)), we have learned three different ways of computing the product $\\mathbf{A} \\mathbf{x}$. What is the total number of flops associated with each one?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5. Product of an $N \\times M$ matrix $\\mathbf{A}$ and an $M \\times 1$ vector $\\mathbf{x}$**\n",
+    "**Product of an $N \\times M$ matrix $\\mathbf{A}$ and an $M \\times L$ matrix $\\mathbf{B}$**\n",
     "\n",
-    "By using the dot product formulation, it can be easily shown that the total number of flops required for computing the resulting vector is $N \\left( 2M - 1 \\right) \\approx 2NM$ flops. In the notebook ([`matrix-vector.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/matrix-vector.ipynb)), we have learned three different ways of computing the product $\\mathbf{A} \\mathbf{x}$. What is the total number of flops associated with each one?"
+    "Determine the total number of flops required for computing the resulting matrix.\n",
+    "\n",
+    "In the notebook ([`matrix-matrix.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/matrix-matrix.ipynb)), we have learned five different algorithms for computing the product $\\mathbf{A} \\mathbf{B}$. What is the total number of flops associated with each one?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**6. Product of an $N \\times M$ matrix $\\mathbf{A}$ and an $M \\times L$ matrix $\\mathbf{B}$**\n",
-    "\n",
-    "By using the examples presented above, it can be shown that the total number of flops required for computing the resulting matrix is $L \\left[ N \\left( 2M - 1 \\right) \\right] \\approx 2NML$ flops. In the notebook ([`matrix-matrix.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/matrix-matrix.ipynb)), we have learned five different algorithms for computing the product $\\mathbf{A} \\mathbf{B}$. What is the total number of flops associated with each one?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "### Exercise (extra)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let $\\mathbf{A}$ be an $N \\times M$ matrix, $\\mathbf{B}$ be an $M \\times L$ matrix, and $\\mathbf{C}$ be an $L \\times P$ matrix. Consider the problem of computing the following matrix:\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{E} = \\mathbf{A} \\, \\mathbf{B} \\, \\mathbf{C} \\: .\n",
-    "$$"
+    "**Product $\\mathbf{A}\\mathbf{B}\\mathbf{C}$ , where $\\mathbf{A}$ is an $N \\times M$ matrix, $\\mathbf{B}$ is an $M \\times L$ matrix and $\\mathbf{C}$ is an $L \\times P$ matrix**"
    ]
   },
   {
@@ -145,23 +136,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, what is the total number of flops required to compute $\\mathbf{E}$ by following each approach?"
+    "In this case, what is the total number of flops required to compute the resulting matrix by following each approach?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -175,9 +157,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
