--- a/Content/first_steps_Python/SMA/sma-1.ipynb
+++ b/Content/first_steps_Python/SMA/sma-1.ipynb
@@ -26,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# plot the figures at the notebook\n",
@@ -299,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
